syntax = "proto3";
package stayking.interchainquery.v1;

import "gogoproto/gogo.proto";
import "stayking/interchainquery/v1/swap_route.proto";

option go_package = "github.com/soohoio/stayking/v3/x/interchainquery/types";

//=============================== EstimateSwapExactAmountOut
message EstimateSwapExactAmountOutRequest {
  reserved 1;
  reserved "sender";
  uint64 pool_id = 2 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  repeated SwapAmountOutRoute routes = 3 [
    (gogoproto.moretags) = "yaml:\"routes\"",
    (gogoproto.nullable) = false
  ];
  string token_out = 4 [ (gogoproto.moretags) = "yaml:\"token_out\"" ];
}

message EstimateSwapExactAmountOutResponse {
  string token_in_amount = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"token_in_amount\"",
    (gogoproto.nullable) = false
  ];
}
